--- a/operaciones3.ipynb
+++ b/operaciones3.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "10.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,7 +19,7 @@
    "source": [
     "import clasesExm as exm\n",
     "\n",
-    "exm.suma(5,5)"
+    "exm.suma(exm.dividir(5,25),5)"
    ]
   }
  ],
