--- a/operacionestodas.ipynb
+++ b/operacionestodas.ipynb
@@ -6,15 +6,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "la suma de 5 y 5 es 10\n",
-      "la resta de 5 y 5 es 0\n",
-      "el producto de 5 y 5 es 25\n",
-      "el cuadrado de 5  es 25\n",
-      "la raiz de 5  es 2.23606797749979\n",
-      "el logaritmo natural de 5  es 1.6094379124341003\n"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[1;32m      4\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIngrese el valor de b: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mla suma de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m y \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m es \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mexm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msuma\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mla resta de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m y \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m es \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexm\u001b[38;5;241m.\u001b[39mresta(a,b)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mel producto de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m y \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m es \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexm\u001b[38;5;241m.\u001b[39mmultiplicar(a,b)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/Repos/gitflow/clasesExm.py:5\u001b[0m, in \u001b[0;36msuma\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msuma\u001b[39m(a,b):\n\u001b[0;32m----> 5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43ma\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mb\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
    ],
@@ -22,14 +22,19 @@
     "import clasesExm as exm\n",
     "\n",
     "a = 5\n",
-    "b = 5\n",
+    "b = 12\n",
     "\n",
     "print(f'la suma de {a} y {b} es {exm.suma(a,b)}')\n",
     "print(f'la resta de {b} y {a} es {exm.resta(a,b)}')\n",
     "print(f'el producto de {a} y {b} es {exm.multiplicar(a,b)}')\n",
     "print(f'el cuadrado de {a}  es {exm.cuadrado(a)}')\n",
     "print(f'la raiz de {a}  es {exm.raizcuad(a)}')\n",
-    "print(f'el logaritmo natural de {a}  es {exm.logaritmo(a)}')"
+    "print(f'el logaritmo natural de {a}  es {exm.logaritmo(a)}')\n",
+    "\n",
+    "#Luego del merge de la rama (commit) se inculyen las operaciones del main \n",
+    "print(f'la division de {b} entre {a} es {exm.dividir(a,b)}')\n",
+    "print(f'la division entera de {b} entre {a} es {exm.divEntera(a,b)}')\n",
+    "print(f'El residuo de la division de {b} entre {a} es {exm.divResiduo(a,b)}')"
    ]
   }
  ],
